# AutoServiceQML

./: .gitignore  AddServiceDialog.qml  AddVehicleDialog.qml  CMakeLists.txt  ChangePasswordDialog.qml  ChoosePathDialog.qml  EditServiceDialog.qml  EditVehicleDialog.qml  LoginPage.qml  LogoutDialog.qml  Main.qml  MainViewPage.qml  NotificationQML.qml  RegistrationPage.qml  RemoveServiceDialog.qml  RemoveVehicleDialog.qml  ServiceView.qml  SuccessDialog.qml  VehicleView.qml  WarningNotificationDialog.qml  customer.cpp  customer.h  databasecontroller.cpp  databasecontroller.h  logincontroller.cpp  logincontroller.h  main.cpp  maintenanceservice.cpp  maintenanceservice.h  notification.cpp  notification.h  notificationmodel.cpp  notificationmodel.h  notificationtemplate.cpp  notificationtemplate.h  registercontroller.cpp  registercontroller.h  repairservice.cpp  repairservice.h  reportsgenerator.cpp  (+21 more)
